--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,8 @@
         "gulp-serve": "^1.4.0",
         "gulp-sourcemaps": "^2.6.5",
         "gulp-uglify": "^3.0.2",
+        "lodash": "^4.17.15",
+        "lodash.template": "^4.5.0",
         "merge-stream": "2.0.0"
     }
 }
